--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,15 @@
-hi
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Summary</tile>
+</head>
+
+<body>
+  <h1> Sentances </h1>
+  <script type="text/javascript" src="js/bundle.js"></script>
+</body>
+</html>
+
 <!-- <html>
 <head>
 	<style type="text/css">
