--- a/popup.html
+++ b/popup.html
@@ -1,44 +1,37 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Summary</tile>
-</head>
-
-<body>
-  <h1> Sentances </h1>
-  <script type="text/javascript" src="js/bundle.js"></script>
-</body>
-</html>
-
-<!-- <html>
-<head>
-	<style type="text/css">
-	body {width:200; height:300;}
-	</style>
-</head>
-<body>
-
- <script type="text/javascript" src="angular.min.js"></script>
-  <script type="text/javascript" src="angular-route.min.js"></script> -->
-  <!-- <script type="text/javascript" src="popup.js"></script>
-	<title>hi</title>
-</body>
-</html> -->
- <!-- --> -
-
-
-
-<!-- <!DOCTYPE html>
 <html lang="en" ng-app="SummarizerExtension" ng-csp>
 <head>
-	<style type="text/css">
-	body {width:200; height:300;}
-	</style>
-
-  <script type="text/javascript" src="popup.js"></script>
-
-<body>
-	<title>{{URL}}</title>
-</body>
+	<title>Summarizer</title>
+	<link rel="stylesheet" href="css/popup.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
-</html> -->
+<body>
+	<div class="container" id="main_container">
+		<br>
+		<div class="jumbotron">
+			<div class-"navbar-outer">
+			<br>
+
+			<br>
+			<div class="ng-cloak">
+				<div ng-controller="PopupListController" id="summary_container">
+					<ol id="list">
+						<li id="sentence" ng-repeat="sentence in sentences">
+							{{sentence}}
+						</li>
+					</ol>
+				</div>
+				<div id="alt_smmry_container">
+					<input type="text" class="form-control" id="article_title" placeholder="Article title"><br>
+					<textarea class="form-control" rows="20" id="pasted_text" type="text" placeholder="Article Text"></textarea><br>
+					<button class="btn btn-primary" id="text_submit">Summarize!</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script type="text/javascript" src="jquery-3.3.1.js"></script>
+	<script type="text/javascript" src="angular.min.js"></script>
+	<script type="text/javascript" src="angular-route.min.js"></script>
+	<script type="text/javascript" src="bundle.js"></script>
+</body>
+</html>
