--- a/popup.html
+++ b/popup.html
@@ -2,37 +2,42 @@
 <html lang="en" ng-app="SummarizerExtension" ng-csp>
 <head>
 	<title>Summarizer</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="popup.css">
 </head>
 <body>
 	<div class="container" id="main_container">
 		<div class="jumbotron">
 			<div class-"navbar-outer">
-			<div class "buttons">
-				<ul class "tabs">
-					<li><a href="popup.html">Home</a></li>
+				<ul class="nav nav-tabs">
+					<li class="active"><a href="popup.html">Home</a></li>
 					<li><a href="hashtag.html">#Hashtag Suggestions</a></li>
 					<li><a href="popup.html">Citations</a></li>
 				</ul>
 			</div>
-			<br></br>
-			<div class="ng-cloak">
-				<div ng-controller="PopupListController" id="summary_container">
-					<div id="alt_smmry_container">
-						<input type="text" class="form-control" id="insert" placeholder="Enter Number of Sentences to be summarized"><br>
-					</div>
-					<ol id="list">
-						<li id="sentence" ng-repeat="sentence in sentences">
-							{{sentence}}
-						</li>
-					</ol>
-				</div>
+			<br>
+		<div class="inputs" id= "sentenceBar">
+			<input type="text" class="form-control" id="insert" placeholder="Enter Number of Sentences to be summarized">
+			<div class="input-buttons">
+				<button type="button" class="btn-default" id="inc_font" title ="increase font">Schmalz Eyes</button>
+				<button type="button" class="btn-default" id="dec_font" title ="decrease font">Normal Eyes</button>
+			</div>
+		</div>
+		<br>
+		<div class="ng-cloak">
+			<div ng-controller="PopupListController" id="summary_container">
+				<ol id="list">
+					<li id="sentence" ng-repeat="sentence in sentences">
+						{{sentence}}
+					</li>
+				</ol>
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="jquery-3.3.1.js"></script>
-	<script type="text/javascript" src="angular.min.js"></script>
-	<script type="text/javascript" src="angular-route.min.js"></script>
-	<script type="text/javascript" src="bundle.js"></script>
 </div>
+<script type="text/javascript" src="jquery-3.3.1.js"></script>
+<script type="text/javascript" src="angular.min.js"></script>
+<script type="text/javascript" src="angular-route.min.js"></script>
+<script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
