--- a/popup.html
+++ b/popup.html
@@ -8,19 +8,24 @@
 <body>
 	<div class="container" id="main_container">
 		<div class="jumbotron">
-			<div class-"navbar-outer">
+			<div class="navbar navbar-default navbar-fixed-top">
 				<ul class="nav nav-tabs">
 					<li class="active"><a href="popup.html">Home</a></li>
 					<li><a href="hashtag.html">#Hashtag Suggestions</a></li>
 					<li><a href="popup.html">Citations</a></li>
+					<li><a href="popup.html">How to Use</a></li>
 				</ul>
 			</div>
-			<br>
-		<div class="inputs" id= "sentenceBar">
+			<br><br><br>
+		<div class="input-group" id= "sentenceBar">
 			<input type="text" class="form-control" id="insert" placeholder="Enter Number of Sentences to be summarized">
-			<div class="input-buttons">
-				<button type="button" class="btn-default" id="inc_font" title ="increase font">Schmalz Eyes</button>
-				<button type="button" class="btn-default" id="dec_font" title ="decrease font">Normal Eyes</button>
+			<button type="button" class="btn btn-default" id="search" title ="Search">
+				<i class="glyphicon glyphicon-search"></i>
+			</button>
+			<div class="inputs">
+				<button type="button" class="btn btn-default" id="int_font" title ="increase font">Zoom in</button>
+				<button type="button" class="btn btn-default" id="dec_font" title ="decrease font">Zoom out</button>
+				<button type="button" class="btn btn-default" id="schmalz_font" title ="TRUE SIGHT 9000!">Schmalz Eyes</button>
 			</div>
 		</div>
 		<br>
