--- a/popup.html
+++ b/popup.html
@@ -10,15 +10,15 @@
 		<div class="jumbotron">
 			<div class="navbar navbar-default navbar-fixed-top">
 				<ul class="nav nav-tabs">
-					<li class="active"><a href="popup.html">Home</a></li>
-					<li><a href="hashtag.html">#Hashtag Suggestions</a></li>
-					<li><a href="popup.html">Citations</a></li>
-					<li><a href="popup.html">How to Use</a></li>
+					<li id="home" class="active"><a href="popup.html">Home</a></li>
+					<li id="tag"><a href="hashtag.html">#Hashtag Suggestions</a></li>
+					<li><a href="citations.html">Citations</a></li>
+					<li><a href="howto.html">How to Use</a></li>
 				</ul>
 			</div>
 			<br><br><br>
 		<div class="input-group" id= "sentenceBar">
-			<input type="text" class="form-control" id="insert" placeholder="Enter Number of Sentences to be summarized">
+			<input type="text" class="form-control" id="insert" placeholder="Enter Number of Sentences to be Summarized!">
 			<button type="button" class="btn btn-default" id="search" title ="Search">
 				<i class="glyphicon glyphicon-search"></i>
 			</button>
@@ -30,6 +30,7 @@
 		</div>
 		<br>
 		<div class="ng-cloak">
+			<div class="loader"></div>
 			<div ng-controller="PopupListController" id="summary_container">
 				<ol id="list">
 					<li id="sentence" ng-repeat="sentence in sentences">
