--- a/hashtag.html
+++ b/hashtag.html
@@ -12,17 +12,19 @@
 				<ul class="nav nav-tabs">
 					<li id="home" class="active"><a href="popup.html">Home</a></li>
 					<li id="tag"><a href="hashtag.html">#Hashtag Suggestions</a></li>
-					<li><a href="citations.html">Citations</a></li>
-					<li><a href="howto.html">How to Use</a></li>
+					<li id="cite"><a href="citations.html">Citations</a></li>
+					<li id="how"><a href="howto.html">How to Use</a></li>
 				</ul>
 			</div>
 			<br><br>
 		<br>
 		<div class="inputs">
 			<p>Suggested #Hashtags
-				<button type="button" class="btn btn-default" id="add_tag" title ="Populate Tags">Generate #Tags</button>
+				<button type="button" class="btn btn-default" id="add_tag" title ="Populate Tags">Generate Additional #Tags</button>
 			</p>
+		</div>
 		<div class="ng-cloak">
+			<div class="loader"></div>
 			<div ng-controller="HashtagController" id="hashtag_container">
 				<ul id="tags">
 					<li id="hashtag" ng-repeat="hashtag in hashtags">
