--- a/citations.html
+++ b/citations.html
@@ -11,19 +11,20 @@
 			<div class="navbar navbar-default navbar-fixed-top">
 				<ul class="nav nav-tabs">
 					<li id="home" class="active"><a href="popup.html">Home</a></li>
-					<li id="tag"><a href="hashtag.html">#Hashtag Suggestions</a></li>
+					<li id="tag"><a href="hashtag.html">HashtagSuggestions</a></li>
+					<li id="keywords"><a href="keywords.html">Keywords</a></li>
 					<li id="cite"><a href="citations.html">Citations</a></li>
 					<li id="how"><a href="howto.html">How to Use</a></li>
 				</ul>
 			</div>
 			<br><br>
 		<br>
-		<div class="inputs">
 
-		</div>
 		<div class="ng-cloak">
 			<div ng-controller="CitationController" id="citation_container">
-
+				<p>Author: {{author}}</p>
+				<p>Publication Date: {{pub_date}}</p>
+				<p>Citation: {{cite}}</p>
 			</div>
 		</div>
 	</div>
