--- a/hashtag.html
+++ b/hashtag.html
@@ -11,7 +11,8 @@
 			<div class="navbar navbar-default navbar-fixed-top">
 				<ul class="nav nav-tabs">
 					<li id="home" class="active"><a href="popup.html">Home</a></li>
-					<li id="tag"><a href="hashtag.html">#Hashtag Suggestions</a></li>
+					<li id="tag"><a href="hashtag.html">HashtagSuggestions</a></li>
+					<li id="keywords"><a href="keywords.html">Keywords</a></li>
 					<li id="cite"><a href="citations.html">Citations</a></li>
 					<li id="how"><a href="howto.html">How to Use</a></li>
 				</ul>
