--- a/popup.html
+++ b/popup.html
@@ -11,21 +11,32 @@
 			<div class="navbar navbar-default navbar-fixed-top">
 				<ul class="nav nav-tabs">
 					<li id="home" class="active"><a href="popup.html">Home</a></li>
-					<li id="tag"><a href="hashtag.html">#Hashtag Suggestions</a></li>
-					<li><a href="citations.html">Citations</a></li>
-					<li><a href="howto.html">How to Use</a></li>
+					<li id="tag"><a href="hashtag.html">HashtagSuggestions</a></li>
+					<li id="keywords"><a href="keywords.html">Keywords</a></li>
+					<li id="cite"><a href="citations.html">Citations</a></li>
+					<li id="how"><a href="howto.html">How to Use</a></li>
 				</ul>
 			</div>
 			<br><br><br>
 		<div class="input-group" id= "sentenceBar">
-			<input type="text" class="form-control" id="insert" placeholder="Enter Number of Sentences to be Summarized!">
+			<input type="text" class="form-control" id="insert" placeholder="Enter Number of Sentences to be Summarized!"></input>
 			<button type="button" class="btn btn-default" id="search" title ="Search">
 				<i class="glyphicon glyphicon-search"></i>
 			</button>
+			<button type="button" class="btn btn-default" id="int_font" title ="increase font">
+				<i class="glyphicon glyphicon-zoom-in"></i>
+			</button>
+			<button type="button" class="btn btn-default" id="dec_font" title ="decrease font">
+				<i class="glyphicon glyphicon-zoom-out"></i>
+			</button>
 			<div class="inputs">
-				<button type="button" class="btn btn-default" id="int_font" title ="increase font">Zoom in</button>
-				<button type="button" class="btn btn-default" id="dec_font" title ="decrease font">Zoom out</button>
-				<button type="button" class="btn btn-default" id="schmalz_font" title ="TRUE SIGHT 9000!">Schmalz Eyes</button>
+				<!--button type="button" class="btn btn-default" id="int_font" title ="increase font">
+					<i class="glyphicon glyphicon-zoom-in"></i>
+				</button>
+				<button type="button" class="btn btn-default" id="dec_font" title ="decrease font">
+					<i class="glyphicon glyphicon-zoom-out"></i>
+				</button>
+				<button type="button" class="btn btn-default" id="schmalz_font" title ="TRUE SIGHT 9000!">Schmalz Eyes</button-->
 			</div>
 		</div>
 		<br>
