--- a/howto.html
+++ b/howto.html
@@ -33,6 +33,15 @@
         <ol>
           <li>10 tags are populated by default. 10 additional are created with button press.</li>
         </ol>
+				<h3>Keywords:</h3>
+				<ul>
+					<li>Keywords is a gloassary of words generated from the page. Each keyword(s) sends the user to
+								a wikipedia page based on the keyword selected.</li>
+				</ul>
+				<h3>Citations:</h3>
+				<ul>
+          <li>Citations will try and generate a MLA formatted cite. It will also provide the </li>
+        </ul>
 			</div>
 		</div>
 	</div>
